--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -16018,7 +16018,7 @@ h3:first-child {
     margin-top: 0 !important;
   }
 }
-._ttgom0 {
+.form-floating {
   position: relative !important;
   display: -webkit-box !important;
   display: -moz-box !important;
@@ -36251,7 +36251,7 @@ tr.show-desktop {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._19nw8j1 {
+.form-floating__control {
   position: relative !important;
   -webkit-flex: 1 1 auto !important;
   -ms-flex: 1 1 auto !important;
@@ -36292,7 +36292,7 @@ tr.show-desktop {
 ._1iwku6d:disabled {
   cursor: not-allowed !important;
 }
-._lmil0 {
+.form-floating__addon {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-align: center !important;
@@ -36315,7 +36315,7 @@ tr.show-desktop {
   pointer-events: none !important;
   color: #222 !important;
 }
-._zhftk97 {
+.form-floating__label {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -53388,7 +53388,7 @@ a:hover {
 ._1wlfjr {
   padding-bottom: 8px !important;
 }
-._ttgom0 {
+.form-floating {
   position: relative !important;
   display: flex !important;
   width: 100% !important;
@@ -53404,12 +53404,12 @@ a:hover {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._19nw8j1 {
+.form-floating__control {
   position: relative !important;
   flex: 1 1 auto !important;
   padding: 0 !important;
 }
-._zhftk97 {
+.form-floating__label {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -53472,7 +53472,7 @@ a:hover {
   background: var(--f-mkcy-f) !important;
   color: var(--f-k-smk-x) !important;
 }
-._lmil0 {
+.form-floating__addon {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   position: absolute !important;
