--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11913,6 +11913,145 @@ fieldset[disabled] .btn {
 }
 /* /Pricing */
 
+/* Spinner Chart */
+.spinner-chart {
+  -webkit-box-align: end !important;
+  -webkit-box-pack: justify !important;
+  position: relative !important;
+  top: 6px !important;
+  margin: 24px 2px 6px !important;
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: flex-end !important;
+}
+@media (min-width: 1128px) {
+  .spinner-chart {
+    margin-top: 0 !important;
+    top: 19px !important;
+  }
+}
+.spinner-chart__bar {
+  display: inline-block !important;
+  border-top-left-radius: 1px !important;
+  border-top-right-radius: 1px !important;
+  flex: 1 1 0% !important;
+  margin-right: 1px !important;
+  background: #b0b0b0 !important;
+}
+.spinner-chart__line-wrapper {
+  position: relative !important;
+  overflow: visible !important;
+}
+@media (min-width: 1128px) {
+  .spinner-chart__line-wrapper {
+    top: 12px !important;
+  }
+}
+.spinner-chart__input[class][class] {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.dir.spinner-chart__input-wrapper[class][class] {
+  margin-top: var(--ikx-k-pe);
+}
+@media (min-width: 744px) {
+  .dir.spinner-chart__input-wrapper[class][class] {
+    margin-top: 36px;
+  }
+}
+.dir.spinner-chart__input-space[class][class] {
+  margin: var(--fgg-f-l-a);
+}
+.spinner-chart__input-price {
+  position: relative !important;
+  cursor: text !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  min-height: 56px !important;
+  width: 100% !important;
+  margin: 0 !important;
+  border: none !important;
+  color: #222 !important;
+  background-color: #fff !important;
+  border-radius: 8px !important;
+  box-shadow: inset 0 0 0 1px #b0b0b0 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+.spinner-chart__input-label {
+  position: relative !important;
+  -webkit-flex: 1 !important;
+  -ms-flex: 1 1 0% !important;
+  flex: 1 !important;
+  padding: 0 !important;
+}
+.spinner-chart__input-currency-text {
+  padding-top: 26px !important;
+  padding-left: 12px !important;
+  margin-right: -6px !important;
+}
+.spinner-chart__input-price {
+  position: relative !important;
+  cursor: text !important;
+  display: flex !important;
+  min-height: 56px !important;
+  width: 100% !important;
+  margin: 0 !important;
+  border: none !important;
+  color: #222 !important;
+  background-color: #fff !important;
+  border-radius: 8px !important;
+  box-shadow: rgb(176 176 176) 0 0 0 1px inset !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+}
+.spinner-chart__input-title {
+  position: absolute !important;
+  top: 18px !important;
+  left: 12px !important;
+  right: 12px !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  color: #717171 !important;
+  pointer-events: none !important;
+  transform-origin: 0 0 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) !important;
+  transform: translateY(-8px) scale(0.75) !important;
+  font-weight: 400 !important;
+}
+.spinner-chart__input-currency {
+  display: flex !important;
+  opacity: 1 !important;
+}
+.spinner-chart__input-label {
+  position: relative !important;
+  flex: 1 1 0% !important;
+  padding: 0 !important;
+}
+.spinner-chart__input-title-text {
+  max-width: 100% !important;
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  white-space: nowrap !important;
+}
+/* /Spinner Chart */
+
 /* Tooltip */
 .tooltip {
   z-index: 3000;
@@ -13352,55 +13491,6 @@ fieldset[disabled] .btn {
 }
 .c12z5wi8[class][class] {
   grid-column: 1/-1
-}
-.spinner-chart {
-  -webkit-box-align: end!important;
-  -webkit-box-pack: justify!important;
-  position: relative!important;
-  top: 6px!important;
-  margin: 24px 2px 6px!important;
-  display: flex!important;
-  justify-content: space-between!important;
-  align-items: flex-end!important
-}
-@media (min-width:1128px) {
-  .spinner-chart {
-    margin-top: 0!important;
-    top: 19px!important
-  }
-}
-.spinner-chart__bar {
-  display: inline-block!important;
-  border-top-left-radius: 1px!important;
-  border-top-right-radius: 1px!important;
-  flex: 1 1 0%!important;
-  margin-right: 1px!important;
-  background: #b0b0b0!important
-}
-.spinner-chart__line-wrapper {
-  position: relative!important;
-  overflow: visible!important
-}
-@media (min-width:1128px) {
-  .spinner-chart__line-wrapper {
-    top: 12px!important
-  }
-}
-.spinner-chart__input[class][class] {
-  display: flex;
-  justify-content: center;
-  align-items: center
-}
-.dir.spinner-chart__input-wrapper[class][class] {
-  margin-top: var(--ikx-k-pe)
-}
-@media (min-width:744px) {
-  .dir.spinner-chart__input-wrapper[class][class] {
-    margin-top: 36px
-  }
-}
-.dir.spinner-chart__input-space[class][class] {
-  margin: var(--fgg-f-l-a)
 }
 ._egiopl {
   font-size: 22px!important;
