--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -20777,7 +20777,7 @@ h3:first-child {
   line-height: 20px !important;
   color: #717171 !important;
 }
-._1ju7xj0j:active {
+.btn-outline--small:active {
   transform: scale(0.96) !important;
   border-color: var(--bgxgx) !important;
   background: var(---pc-g-v-g) !important;
@@ -38122,7 +38122,7 @@ tr.show-desktop {
     transition: none !important;
   }
 }
-._1ju7xj0j {
+.btn-outline--small {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -38153,7 +38153,7 @@ tr.show-desktop {
   background: var(--f-mkcy-f) !important;
   color: var(--f-k-smk-x) !important;
 }
-._1ju7xj0j:focus-visible {
+.btn-outline--small:focus-visible {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
@@ -38162,25 +38162,25 @@ tr.show-desktop {
   border-color: var(--f-k-smk-x) !important;
   color: var(--f-k-smk-x) !important;
 }
-._1ju7xj0j:focus-visible::-moz-focus-inner {
+.btn-outline--small:focus-visible::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1ju7xj0j:focus-visible:focus::-moz-focus-inner {
+.btn-outline--small:focus-visible:focus::-moz-focus-inner {
   border: none !important;
 }
-._1ju7xj0j:focus-visible:-moz-focusring {
+.btn-outline--small:focus-visible:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1ju7xj0j:focus-visible {
+  .btn-outline--small:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._1ju7xj0j:focus[data-focus-visible-added] {
+.btn-outline--small:focus[data-focus-visible-added] {
   outline: 0 !important;
   -webkit-transition: box-shadow 0.2s !important;
   -moz-transition: box-shadow 0.2s !important;
@@ -38189,32 +38189,32 @@ tr.show-desktop {
   border-color: var(--f-k-smk-x) !important;
   color: var(--f-k-smk-x) !important;
 }
-._1ju7xj0j:focus[data-focus-visible-added]::-moz-focus-inner {
+.btn-outline--small:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._1ju7xj0j:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.btn-outline--small:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none !important;
 }
-._1ju7xj0j:focus[data-focus-visible-added]:-moz-focusring {
+.btn-outline--small:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1ju7xj0j:focus[data-focus-visible-added] {
+  .btn-outline--small:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
 @media (hover: hover) {
-  ._1ju7xj0j:hover {
+  .btn-outline--small:hover {
     border-color: var(--bgxgx) !important;
     background: var(---pc-g-v-g) !important;
     color: var(--f-k-smk-x) !important;
   }
 }
-._1ju7xj0j:active {
+.btn-outline--small:active {
   -webkit-transform: scale(0.96) !important;
   -ms-transform: scale(0.96) !important;
   transform: scale(0.96) !important;
@@ -38222,7 +38222,7 @@ tr.show-desktop {
   background: var(---pc-g-v-g) !important;
   color: var(--f-k-smk-x) !important;
 }
-._1ju7xj0j:disabled {
+.btn-outline--small:disabled {
   cursor: not-allowed !important;
   opacity: 1 !important;
   border-color: var(--j-qkgmf) !important;
@@ -38230,7 +38230,7 @@ tr.show-desktop {
   color: var(--j-qkgmf) !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._1ju7xj0j {
+  .btn-outline--small {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
@@ -53447,7 +53447,7 @@ a:hover {
 ._ls0e43 {
   margin-left: auto !important;
 }
-._1ju7xj0j {
+.btn-outline--small {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
