--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -53312,7 +53312,7 @@ a:hover {
   padding: 4px !important;
   border-radius: 8px !important;
 }
-._159914b {
+.form__textarea {
   color: inherit !important;
   display: block !important;
   min-width: 100% !important;
