--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -32237,7 +32237,7 @@ tr.show-desktop {
   color: #222 !important;
   margin-bottom: 8px !important;
 }
-._4pyial {
+.form-badge {
   -webkit-box-align: center !important;
   display: inline-flex !important;
   align-items: center !important;
@@ -32251,7 +32251,7 @@ tr.show-desktop {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._cdqlxt {
+.form__badge-btn {
   height: 16px !important;
   margin-left: 12px !important;
 }
