--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -32209,7 +32209,7 @@ tr.show-desktop {
   background-color: #fff !important;
   opacity: 1 !important;
 }
-._1otaoi4o {
+.form__input--small {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
