extract pointer-events-none

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4882,6 +4882,9 @@ select[disabled] {
 .cursor-pointer {
   	cursor: pointer;
 }
+.pointer-events-none{
+  pointer-events: none;
+}
 /* /Utilities */
 
 /* Footer */
