extract meet-host-card

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -11630,6 +11630,70 @@ fieldset[disabled] .btn {
 }
 /* /Lite image */
 
+/* Meet Host Card */
+.meet-host-card {
+  background: 0 0 !important;
+  border: none !important;
+  color: inherit !important;
+  cursor: pointer !important;
+  display: block !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  text-align: inherit !important;
+  text-decoration: none !important;
+  height: 100% !important;
+  width: 100% !important;
+  -ms-touch-action: manipulation !important;
+  touch-action: manipulation !important;
+}
+.meet-host-card__lite-image-wrapper {
+  border-radius: 8px !important;
+  margin-bottom: 8px !important;
+  overflow: hidden !important;
+}
+@media (min-width: 744px) {
+  .meet-host-card__lite-image-wrapper {
+    border-radius: 12px !important;
+  }
+}
+@media (min-width: 1128px) {
+  .meet-host-card__lite-image-wrapper {
+    margin-bottom: 24px !important;
+  }
+}
+.meet-host-card__title {
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 800 !important;
+  margin-bottom: 4px !important;
+}
+@media (min-width: 1128px) {
+  .meet-host-card__title {
+    font-size: 18px !important;
+    line-height: 24px !important;
+  }
+}
+.meet-host-card__subtitle {
+  margin-bottom: 4px !important;
+}
+@media (min-width: 1128px) {
+  .meet-host-card__subtitle {
+    margin-bottom: 8px !important;
+  }
+}
+.meet-host-card__text {
+  display: none !important;
+}
+@media (min-width: 1128px) {
+  .meet-host-card__text {
+    font-size: 16px !important;
+    line-height: 24px !important;
+    display: block !important;
+    padding: 0 20px !important;
+  }
+}
+/* /Meet Host Card */
+
 /* Modals */
 .modal__backdrop {
   z-index: 2000 !important;
