extract btn-filter

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -10454,8 +10454,368 @@ fieldset[disabled] .btn {
   position: relative !important;
   background: 0 0 !important;
   transition: -ms-transform 0.25s, -webkit-transform 0.25s, transform 0.25s !important;
-/* /Buttons */
 }
+.btn-filter-rounded {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid #ddd !important;
+  background-color: #fff !important;
+  outline: 0 !important;
+  padding: 10px 16px !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  position: relative !important;
+  -webkit-transition-property: -webkit-transform, transform, background-color,
+    border-color !important;
+  -moz-transition-property: transform, background-color, border-color !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  -webkit-transition-duration: 0.15s !important;
+  transition-duration: 0.15s !important;
+  -webkit-transition-timing-function: ease-in-out !important;
+  transition-timing-function: ease-in-out !important;
+  border-radius: 30px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  width: 100% !important;
+}
+.btn-filter-rounded:disabled {
+  cursor: not-allowed !important;
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded:disabled:hover {
+    color: #ddd !important;
+    border-color: #ebebeb !important;
+  }
+}
+.btn-filter-rounded:disabled:active {
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+  -webkit-transform: none !important;
+  -ms-transform: none !important;
+  transform: none !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded:hover {
+    color: #000 !important;
+    border-color: #000 !important;
+  }
+}
+.btn-filter-rounded:active {
+  color: #000 !important;
+  border-color: #000 !important;
+  -webkit-transform: scale(0.925) !important;
+  -ms-transform: scale(0.925) !important;
+  transform: scale(0.925) !important;
+}
+.btn-filter-rounded::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-filter-rounded:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-filter-rounded:-moz-focusring {
+  outline: 0 !important;
+}
+.btn-filter-rounded:focus-visible {
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-filter-rounded:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.btn-filter-rounded-sm-secondary {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: #ddd !important;
+  background-color: #f2f2f2 !important;
+  outline: 0 !important;
+  padding: 8px 16px !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  position: relative !important;
+  -webkit-transition-property: -webkit-transform, transform, background-color,
+    border-color !important;
+  -moz-transition-property: transform, background-color, border-color !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  -webkit-transition-duration: 0.15s !important;
+  transition-duration: 0.15s !important;
+  -webkit-transition-timing-function: ease-in-out !important;
+  transition-timing-function: ease-in-out !important;
+  border-radius: 30px !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+}
+.btn-filter-rounded-sm-secondary:disabled {
+  cursor: not-allowed !important;
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded-sm-secondary:disabled:hover {
+    color: #ddd !important;
+    border-color: #ebebeb !important;
+  }
+}
+.btn-filter-rounded-sm-secondary:disabled:active {
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+  -webkit-transform: none !important;
+  -ms-transform: none !important;
+  transform: none !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded-sm-secondary:hover {
+    color: #000 !important;
+    border-color: #000 !important;
+  }
+}
+.btn-filter-rounded-sm-secondary:active {
+  color: #000 !important;
+  border-color: #000 !important;
+  -webkit-transform: scale(0.925) !important;
+  -ms-transform: scale(0.925) !important;
+  transform: scale(0.925) !important;
+}
+.btn-filter-rounded-sm-secondary::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-filter-rounded-sm-secondary:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-filter-rounded-sm-secondary:-moz-focusring {
+  outline: 0 !important;
+}
+.btn-filter-rounded-sm {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid #ddd !important;
+  background-color: #fff !important;
+  outline: 0 !important;
+  padding: 4px 12px !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    Helvetica Neue, sans-serif !important;
+  position: relative !important;
+  -webkit-transition-property: -webkit-transform, transform, background-color,
+    border-color !important;
+  -moz-transition-property: transform, background-color, border-color !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  -webkit-transition-duration: 0.15s !important;
+  transition-duration: 0.15s !important;
+  -webkit-transition-timing-function: ease-in-out !important;
+  transition-timing-function: ease-in-out !important;
+  min-height: 32px !important;
+  border-radius: 16px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+.btn-filter-rounded-sm:disabled {
+  cursor: not-allowed !important;
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded-sm:disabled:hover {
+    color: #ddd !important;
+    border-color: #ebebeb !important;
+  }
+}
+.btn-filter-rounded-sm:disabled:active {
+  color: #ddd !important;
+  border-color: #ebebeb !important;
+  -webkit-transform: none !important;
+  -ms-transform: none !important;
+  transform: none !important;
+}
+@media (hover: hover) {
+  .btn-filter-rounded-sm:hover {
+    color: #000 !important;
+    border-color: #000 !important;
+  }
+}
+.btn-filter-rounded-sm:active {
+  color: #000 !important;
+  border-color: #000 !important;
+  -webkit-transform: scale(0.925) !important;
+  -ms-transform: scale(0.925) !important;
+  transform: scale(0.925) !important;
+}
+.btn-filter-rounded-sm::-moz-focus-inner {
+  border: none !important;
+  padding: 0 !important;
+  margin: 0 !important;
+}
+.btn-filter-rounded-sm:focus::-moz-focus-inner {
+  border: none !important;
+}
+.btn-filter-rounded-sm:-moz-focusring {
+  outline: 0 !important;
+}
+.btn-filter-rounded-sm:focus-visible {
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-filter-rounded-sm:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+._1n9ev8k3:focus-visible {
+  color: #fff !important;
+}
+.btn-filter-rounded-sm-secondary:focus-visible {
+  -webkit-transition: box-shadow 0.2s !important;
+  -moz-transition: box-shadow 0.2s !important;
+  transition: box-shadow 0.2s !important;
+  box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
+}
+@media (prefers-reduced-motion: reduce) {
+  .btn-filter-rounded-sm-secondary:focus-visible {
+    -webkit-transition: none !important;
+    -moz-transition: none !important;
+    transition: none !important;
+  }
+}
+.btn-filter[class][class] {
+  appearance: none;
+  display: inline-block;
+  border-radius: 50%;
+  border: 0;
+  outline: 0;
+  margin: -7px;
+  padding: 7px;
+  color: buttontext;
+  touch-action: manipulation;
+  min-width: var(--cw-a-a-u-a);
+  height: var(--cw-a-a-u-a);
+  color: var(--f-k-smk-x);
+}
+.dir.btn-filter[class][class] {
+  background-color: transparent;
+  cursor: pointer;
+  border: var(--filter-button_border, 1px solid var(--j-qkgmf));
+  border-radius: var(--b-y-unon);
+  margin: 0;
+  padding: 7px 0;
+}
+.btn-filter[class][class]:focus-visible {
+  outline: 0;
+}
+.dir.btn-filter[class][class]:focus-visible {
+  transition: box-shadow 0.2s;
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7);
+}
+.dir.btn-filter[class][class]:focus-visible::-moz-focus-inner {
+  border: none;
+  padding: 0;
+  margin: 0;
+}
+.dir.btn-filter[class][class]:focus-visible:focus::-moz-focus-inner {
+  border: none;
+}
+.btn-filter[class][class]:focus-visible:-moz-focusring {
+  outline: 0;
+}
+@media (prefers-reduced-motion: reduce) {
+  .dir.btn-filter[class][class]:focus-visible {
+    transition: none;
+  }
+}
+.btn-filter[class][class]:disabled {
+  opacity: 0.5;
+  color: graytext;
+}
+.dir.btn-filter[class][class]:disabled {
+  cursor: not-allowed;
+}
+.btn-filter-label[class][class] {
+  display: grid;
+  justify-items: center;
+  grid-auto-flow: column;
+}
+.dir.btn-filter-label[class][class] {
+  padding-top: var(--d-b-mrdy);
+}
+.btn-filter__text[class][class] {
+  font-size: var(--f-cv-j-j-p);
+  line-height: var(--f-l-h-bac);
+  font-weight: var(--jx-zk-pv);
+  display: none;
+}
+.btn-filter-count[class][class] {
+  display: none;
+  pointer-events: none;
+  position: absolute;
+  top: -4px;
+  width: 20px;
+  height: 20px;
+}
+.dir.btn-filter-count[class][class] {
+  background: var(--f-k-smk-x);
+  border-radius: 50%;
+  border: 1.5px solid var(--f-mkcy-f);
+  transition: color 0.2s;
+  transform: translateY(-1px);
+  text-align: center;
+}
+.dir-ltr.btn-filter-count[class][class] {
+  right: -4px;
+}
+.btn-filter-count__text[class][class] {
+  font-size: var(--hr-k-udr);
+  line-height: var(--dpgw-ac);
+  color: var(--f-mkcy-f);
+  font-weight: var(--h-oqhch);
+}
+.dir.btn-filter-count__text[class][class] {
+  margin-top: var(--d-b-mrdy);
+}
+.btn-filter-rounded-sm {
+  cursor: pointer !important;
+  text-align: center !important;
+  border: 1px solid #ddd !important;
+  background-color: #fff !important;
+  outline: 0 !important;
+  margin: 0 !important;
+  color: #222 !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
+    'Helvetica Neue', sans-serif !important;
+  position: relative !important;
+  transition-property: -ms-transform, -webkit-transform, transform,
+    background-color, border-color !important;
+  transition-duration: 0.15s !important;
+  transition-timing-function: ease-in-out !important;
+  padding: 4px 12px !important;
+  min-height: 32px !important;
+  border-radius: 16px !important;
+  font-size: 14px !important;
+  line-height: 18px !important;
+}
+/* /Buttons */
 
 /* Card Long */
 .card-long__media-container {
