Revert "rename form__input--small"
This reverts commit 5bc03100e3b7608d75af263ff5caf9bb6017269f.

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -32209,7 +32209,7 @@ tr.show-desktop {
   background-color: #fff !important;
   opacity: 1 !important;
 }
-.form__input--small {
+._1otaoi4o {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
