--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -32209,7 +32209,7 @@ tr.show-desktop {
   background-color: #fff !important;
   opacity: 1 !important;
 }
-.form__input--small {
+._1otaoi4o {
   width: 100% !important;
   border: none !important;
   outline: 0 !important;
