rename breadcrumb, inline-block

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -31124,7 +31124,7 @@ tr.show-desktop {
     display: none;
   }
 }
-._1ckj08w {
+.breadcrumb {
   padding: 0 !important;
   margin: 0 !important;
 }
@@ -49339,7 +49339,7 @@ tr.show-desktop {
   display: inline-block !important;
   padding-right: 11px !important;
 }
-._36rlri {
+.inline-block {
   display: inline-block !important;
 }
 ._1n0bqws7 {
