--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12509,6 +12509,33 @@ fieldset[disabled] .btn {
 }
 /* /Hero banner */
 
+/* Jumbotron Header */
+.jumbotron-header__text[class][class] {
+  color: var(--f-k-smk-x);
+  font-weight: var(--h-oqhch);
+  font-size: var(--cv-p-u-ui);
+  line-height: var(--hu-t-o-g-n);
+}
+.dir.jumbotron-header__text[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+}
+@media (max-width: 743px) {
+  .jumbotron-header__text[class][class] {
+    font-size: var(--lhy-d-yl);
+    line-height: var(--fme-bf-w);
+  }
+}
+.jumbotron-header__description[class][class] {
+  font-size: var(--iw-ehf-f);
+  line-height: var(---s-l-myu);
+  font-weight: var(--e-y-j-d-v-j);
+  color: var(--fo-jk-r-s);
+}
+.dir.jumbotron-header__description[class][class] {
+  margin-top: var(--fgg-f-l-a);
+}
+/* /Jumbotron Header */
+
 /* List Group */
 .list-group {
   -webkit-box-direction: normal !important;
