--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -12732,7 +12732,7 @@ fieldset[disabled] .btn {
 /* /List Group */
 
 /* Lite image */
-.lite-image-absolute {
+.lite-image__default {
   top: 0 !important;
   bottom: 0 !important;
   left: 0 !important;
@@ -12742,7 +12742,7 @@ fieldset[disabled] .btn {
   position: absolute !important;
 }
 @supports (object-fit: cover) {
-  .lite-image-absolute {
+  .lite-image__default {
     height: 100% !important;
     width: 100% !important;
   }
